add bookmarkDRs table,add book icon in aboutDoctor page and bottomNavBar of new pages as horizontalPager in home screen

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -19,7 +19,7 @@
     <color name="blueGrey">#CCCED3</color>
     <color name="DarkblueGrey">#5F5F60</color>
     <color name="ButtonColor">#130530</color>
-    <color name="darkBlue">#130530</color>
+    <color name="darkBlue">#1B0743</color>
     <color name="unSelected">#afcace</color>
     <color name="itemColor">#D77CD5FF</color>
     <color name="transparentWhite">#1EE3E3E3</color>
